feat:完善群聊模块以及文件上传等其他功能
